# react-native-nitro-fs

./: .gitignore  CHANGELOG.md  NitroFS.podspec  NitroFs.podspec  README.md  nitro.json  package.json  post-script.js  release.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: android-build.yml  ios-build.yml  pod-install.yml  release.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/nitrofs/: File+Extensions.kt  FileDownloader.kt  HybridNitroFS.kt  HybridNitroFs.kt  NitroFSImpl.kt  NitroFSPackage.java  NitroFileUploader.kt  NitroFsPackage.java  NitroHttpClient.kt  ResolvedPath.kt
example/: App.tsx  Gemfile  app.json  babel.config.js  metro.config.js  package.json  tsconfig.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/ios/: Podfile
example/ios/NitroFsExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/NitroFsExample.xcodeproj/: project.pbxproj
example/ios/NitroFsExample.xcworkspace/: contents.xcworkspacedata
example/src/components/: action-panel.tsx  benchmark-page.tsx  directory-navigation.tsx  file-editor.tsx  file-item.tsx  file-list.tsx  header.tsx  path-display.tsx  progress-indicator.tsx
ios/: Bridge.h  HybridNitroFs.swift  NitroFSFileDownloader.swift  NitroFSFileUploader.swift  NitroFSImpl+Utils.swift  NitroFSImpl.swift  Utils.swift
server/: go.mod  main.go
src/: index.ts  type.ts
src/specs/: nitro-fs.nitro.ts
(+9 files in other folders)
